--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#6eb52f"
-backgroundColor="#faf7f5"
-secondaryBackgroundColor="#fcf2f2"
-textColor="#262730"
-font="sans serif"
+primaryColor='#ec0000'
+backgroundColor='#f0f0f0'
+secondaryBackgroundColor='#c2c2c2'
+textColor='#333333'
+font="arial"
