--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#6eb52f"
-backgroundColor="#faf7f5"
-secondaryBackgroundColor="#fcf2f2"
-textColor="#262730"
+primaryColor="#f0f0f0"
+backgroundColor="#f0f0f0"
+secondaryBackgroundColor="#d30000"
+textColor="#FFFFFF"
 font="sans serif"
